RESOLVED - issue SPAGOBI-868: As SpagoBI Administrator I want to have the possibility to save the result of a schedule as file within the resource folder of SpagoBI Server https://spagobi.eng.it/jira/browse/SPAGOBI-868
git-svn-id: svn://svn.forge.objectweb.org/svnroot/spagobi/V_3.x/Server/trunk@18163 99afaf0d-6903-0410-885a-c66a8bbb5f81